flux/controllers/overlays/linkerd-dev/traefik/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-external-dashboard
  namespace: traefik
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: "Host(`traefik.localhost`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))"
    services:
    - kind: TraefikService
      name: api@internal
